# Dist_ackerman

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.39f4221.22  master_node.json  package.xml
.git.bak/: COMMIT_EDITMSG  index
.git.bak/logs/: HEAD
.git.bak/logs/refs/heads/: main
.git.bak/refs/heads/: main
master/: master_ros_node.h  server_node.cpp
slave/: client_node.cpp  client_node1.cpp  slave_ros_node.h  slave_ros_node1.h
src/: common.h  json.cpp  json.h  lz77.h  md5.h  mpc_controller_nmpc.h  nlohmann_json.hpp  ros_utils.h  simple_log.h  zbase64.h  zmq_client.cpp  zmq_client.h  zmq_server.cpp  zmq_server.h  zmq_util.cpp  zmq_util.h
src/jarvis_msgs/: Clean.h  CleanRes.h  Clearance.h  Cmd.h  CmdData.h  Fault.h  FollowVel.h  FollowVelAck.h  GetTagId.h  GetTagIdRequest.h  GetTagIdResponse.h  Info.h  Json.h  LocInit.h  LocResult.h  Map.h  MotorAckerman.h  Odom.h  OdomSteer.h  Param.h  PlanPath.h  RecordBag.h  RecordBagRequest.h  RecordBagResponse.h  RefPoint.h  RobotStatus.h  RobotVel.h  Rotate.h  RotateRes.h  RotateRes.msg  Sonar.h  Vel.h  VelAckerman.h  VelSteer.h
